Adding Main Files

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,6 +5,9 @@ AWS_DEFAULT_REGION = "us-east-2"
 COGNITO_USER_POOL_ID = "us-east-2_Xw0oJ21qa"
 COGNITO_CLIENT_ID = "5o43flgnhbh7pl6v86qegbkdsf"
 COGNITO_CLIENT_SECRET = "10dqtvn67beifl77ltl2nuf70d4qfv791bnkclgi97v5tsem19r2"
+COGNITO_DEFAULT_REGION = "us-east-2"
+
+
 
 # AWS and Cognito Configurations
 BUCKET_NAME = "pivotalbucket"
